spec/error_inferred_method_mismatch.expected
spec/error_inferred_method_mismatch.kex:5:16: error: `firstWord` expects argument 1 to be String, but got Integer

firstWord : String -> [String]
Aborted: fix type errors before running (use --no-check to skip).
